--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,8 @@ dependencies:
   flutter_bloc: ^8.0.1
   cached_network_image: ^3.2.2
   speech_to_text: ^6.1.1
+  loading_animation_widget: ^1.2.0+4
+  flutter_tts: ^3.5.0
 
 dev_dependencies:
   flutter_test:
