Fixed the speaker problem

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -6,7 +6,7 @@
     <uses-permission android:name="android.permission.BLUETOOTH_ADMIN"/>
     <uses-permission android:name="android.permission.BLUETOOTH_CONNECT"/>
    <application
-        android:label="chatgpt_virtual_assistant"
+        android:label="Jojo"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
